# rust-vb-platform

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
examples/display-text/: Cargo.toml  assets.toml
examples/display-text/src/: main.rs
examples/hello-world/: Cargo.toml  build.rs
examples/hello-world/src/: assets.rs  main.rs
examples/rpg/: Cargo.toml  README.md  assets.toml  build.rs
examples/rpg/assets/: esma_still.toml  esma_walk.toml  waltz.json
examples/rpg/assets/instruments/: Drums.fui  Harmony1.fui  Harmony2.fui  HiHats.fui  Pulse (12.5%).fuw  Pulse (25%).fuw  Pulse (50%).fuw  Rhythm1.fui  Rhythm2.fui  Triangle.fui  Triangle.fuw
examples/rpg/src/: main.rs
examples/spooky-music/: Cargo.toml  assets.toml
examples/spooky-music/assets/: chirax.fur  chirax_attack.fur  donjon.mid  hurt.fur  jump2.fur  test.fur
examples/spooky-music/src/: assets.rs  main.rs
vb-rt/: Cargo.toml
vb-rt/src/: header.rs  lib.rs  reset.rs
